# Observal

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE_COMMITMENT.md  Makefile  PLAN.md  README.md  REUSE.toml  SECURITY.md  SETUP.md  SSO_VALIDATION_GAPS.md  cliff.toml  install-server.sh  install.sh  otel-collector-config.yaml  package.json  pnpm-lock.yaml  pyproject.toml  renovate.json
observal-server/: README.md  alembic.ini  app_factory.py  config.py  health.py  logging_config.py  main.py  middleware.py  pyproject.toml  pyrightconfig.json  routes.py  startup.py  worker.py
observal-server/alembic/: env.py
observal-server/api/: deps.py  graphql.py  ratelimit.py
observal-server/data/: litellm_model_catalog.json
observal-server/jobs/: catalog.py  maintenance.py
observal-server/models/: __init__.py  agent.py  agent_component.py  alert.py  alert_history.py  api_key.py  component_bundle.py  download.py  exec_config.py  feedback.py  graphrag.py  hook.py  insight_meta_cache.py  insight_report.py  insight_session_facets.py  insight_session_meta.py  invite.py  mcp.py  organization.py  prompt.py  saml_config.py  sandbox.py  scim_token.py  skill.py  submission.py  tool.py  user.py  user_group.py
observal-server/schemas/: admin.py  agent.py  alert.py  auth.py  bulk.py  component_version.py  constants.py  dashboard.py  eval.py  feedback.py  graphrag.py  harness_registry.py  hook.py  ide_registry.py  insights.py  insights_models.py  keys.py  mcp.py  (+6 more)
(+840 files in other folders)
