[project]
name = "observal-server"
version = "0.1.0"
description = "Observal API server"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "email-validator",
    "alembic",
    "httpx",
    "gitpython",
    "boto3",
    "redis[hiredis]",
    "arq",
    "strawberry-graphql[fastapi]",
    "authlib",
    "itsdangerous",
    "cryptography>=43.0.0",
    "cffi",
    "slowapi",
    "PyJWT>=2.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
